--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Sistem informasi geografis untuk pemetaan dan dokumentasi daftar usaha resmi di Kota Medan dengan teknologi modern dan data yang akurat." />
     <meta name="keywords" content="pemetaan usaha, medan, sistem informasi geografis, GIS, bisnis medan" />
     <meta name="author" content="Pemerintah Kota Medan" />
+    <link rel="icon" type="image/png" href="/img/Sirantau.png" />
+    <link rel="apple-touch-icon" href="/img/Sirantau.png" />
   </head>
 
   <body>
